# LexorInterpreter

./: CMakeLists.txt  README.md  lexor.cpp  test.lexor  test2.lexor  test3.lexor  test4.lexor  test5.lexor  test6.lexor  test7.lexor
src/: main.cpp
src/AST/: Expr.h  Stmt.h
src/Lexer/: Lexer.cpp  Lexer.h  Token.h
src/Parser/: Parser.cpp  Parser.h
src/Runtime/: Environment.h  Interpreter.cpp  Interpreter.h  Value.h
tests/: TESTHERE.lexor  phase1_lexer.lexor  phase2_math.lexor  phase3_loops.lexor
